# ASHES

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STATUS.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements-basic.txt  requirements-core.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  run.py  run_production.py  setup-frontend.sh  start_ashes.sh
scripts/: backup.sh  restore.sh
src/ashes/: __init__.py  startup.py
src/ashes/agents/: base.py  critic.py  ethics.py  experimentalist.py  manager.py  synthesizer.py  synthesizer_core.py  theorist.py
src/ashes/api/: main.py  models.py  websocket.py
src/ashes/core/: config.py  logging.py  orchestrator.py  orchestrator_enterprise.py  state.py
src/ashes/data/: __init__.py  manager.py  manager_minimal.py
src/ashes/database/: models.py  session.py
src/ashes/laboratory/: __init__.py  controller.py  controller_minimal.py
src/ashes/monitoring/: __init__.py
src/ashes/safety/: __init__.py  monitor.py
src/ashes/security/: auth.py  auth_enterprise.py
