[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashes"
version = "1.0.1"
description = "Autonomous Scientific Hypothesis Evolution System - AI-powered research platform for automated scientific discovery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Chandu Chitikam", email = "chandu@portalvii.com"}
]
keywords = [
    "autonomous", "scientific", "research", "ai", "agents", 
    "laboratory", "automation", "hypothesis", "evolution", "portalvii"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "langchain>=0.1.20",
    "langgraph>=0.0.55",
    "openai>=1.12.0",
    "anthropic>=0.21.3",
    "pinecone-client>=3.2.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.3",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0"
]
ml = [
    "tensorflow>=2.16.1",
    "torch>=2.2.1",
    "transformers>=4.38.2",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1"
]
lab = [
    "pymeasure>=0.13.1",
    "pyvisa>=1.14.1",
    "pyserial>=3.5",
    "opencv-python>=4.9.0.80"
]
monitoring = [
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0"
]

[project.urls]
Homepage = "https://github.com/ashes-lab/ashes"
Documentation = "https://docs.ashes-lab.com"
Repository = "https://github.com/ashes-lab/ashes.git"
"Bug Tracker" = "https://github.com/ashes-lab/ashes/issues"

[project.scripts]
ashes = "ashes.cli:main"
ashes-server = "ashes.api.main:start_server"
ashes-worker = "ashes.workers.main:start_worker"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ashes*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "laboratory: marks tests that require laboratory equipment"
]

[tool.coverage.run]
source = ["src/ashes"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
